; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_dpapi.c_kull_m_dpapi_blob_descr.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_dpapi.c_kull_m_dpapi_blob_descr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [13 x i32] [i32 37, i32 42, i32 115, i32 42, i32 42, i32 66, i32 76, i32 79, i32 66, i32 42, i32 42, i32 10, i32 0], align 4
@.str.1 = private unnamed_addr constant [1 x i32] zeroinitializer, align 4
@.str.2 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 86, i32 101, i32 114, i32 115, i32 105, i32 111, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.3 = private unnamed_addr constant [27 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 103, i32 117, i32 105, i32 100, i32 80, i32 114, i32 111, i32 118, i32 105, i32 100, i32 101, i32 114, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 0], align 4
@.str.4 = private unnamed_addr constant [2 x i32] [i32 10, i32 0], align 4
@.str.5 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 77, i32 97, i32 115, i32 116, i32 101, i32 114, i32 75, i32 101, i32 121, i32 86, i32 101, i32 114, i32 115, i32 105, i32 111, i32 110, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.6 = private unnamed_addr constant [27 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 103, i32 117, i32 105, i32 100, i32 77, i32 97, i32 115, i32 116, i32 101, i32 114, i32 75, i32 101, i32 121, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 0], align 4
@.str.7 = private unnamed_addr constant [38 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 70, i32 108, i32 97, i32 103, i32 115, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 32, i32 40, i32 0], align 4
@.str.8 = private unnamed_addr constant [3 x i32] [i32 41, i32 10, i32 0], align 4
@.str.9 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 68, i32 101, i32 115, i32 99, i32 114, i32 105, i32 112, i32 116, i32 105, i32 111, i32 110, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.10 = private unnamed_addr constant [30 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 115, i32 122, i32 68, i32 101, i32 115, i32 99, i32 114, i32 105, i32 112, i32 116, i32 105, i32 111, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 115, i32 10, i32 0], align 4
@.str.11 = private unnamed_addr constant [42 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 97, i32 108, i32 103, i32 67, i32 114, i32 121, i32 112, i32 116, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 32, i32 40, i32 37, i32 115, i32 41, i32 10, i32 0], align 4
@.str.12 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 65, i32 108, i32 103, i32 67, i32 114, i32 121, i32 112, i32 116, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.13 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 83, i32 97, i32 108, i32 116, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.14 = private unnamed_addr constant [27 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 112, i32 98, i32 83, i32 97, i32 108, i32 116, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 0], align 4
@.str.15 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 72, i32 109, i32 97, i32 99, i32 75, i32 101, i32 121, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.16 = private unnamed_addr constant [27 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 112, i32 98, i32 72, i32 109, i32 97, i32 99, i32 107, i32 75, i32 101, i32 121, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 0], align 4
@.str.17 = private unnamed_addr constant [42 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 97, i32 108, i32 103, i32 72, i32 97, i32 115, i32 104, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 32, i32 40, i32 37, i32 115, i32 41, i32 10, i32 0], align 4
@.str.18 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 65, i32 108, i32 103, i32 72, i32 97, i32 115, i32 104, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.19 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 72, i32 109, i32 97, i32 99, i32 50, i32 75, i32 101, i32 121, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.20 = private unnamed_addr constant [27 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 112, i32 98, i32 72, i32 109, i32 97, i32 99, i32 107, i32 50, i32 75, i32 101, i32 121, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 0], align 4
@.str.21 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 68, i32 97, i32 116, i32 97, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.22 = private unnamed_addr constant [27 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 112, i32 98, i32 68, i32 97, i32 116, i32 97, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 0], align 4
@.str.23 = private unnamed_addr constant [37 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 100, i32 119, i32 83, i32 105, i32 103, i32 110, i32 76, i32 101, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 37, i32 48, i32 56, i32 120, i32 32, i32 45, i32 32, i32 37, i32 117, i32 10, i32 0], align 4
@.str.24 = private unnamed_addr constant [27 x i32] [i32 37, i32 42, i32 115, i32 32, i32 32, i32 112, i32 98, i32 83, i32 105, i32 103, i32 110, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 32, i32 58, i32 32, i32 0], align 4
@.str.25 = private unnamed_addr constant [3 x i32] [i32 10, i32 10, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kull_m_dpapi_blob_descr(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = shl i32 %5, 1
  %7 = call i32 (i8*, ...) @kprintf(i8* bitcast ([13 x i32]* @.str to i8*), i32 %6, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = icmp ne %struct.TYPE_3__* %8, null
  br i1 %9, label %10, label %216

10:                                               ; preds = %2
  %11 = load i32, i32* %3, align 4
  %12 = shl i32 %11, 1
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 20
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 20
  %18 = load i32, i32* %17, align 4
  %19 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.2 to i8*), i32 %12, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %15, i32 %18)
  %20 = load i32, i32* %3, align 4
  %21 = shl i32 %20, 1
  %22 = call i32 (i8*, ...) @kprintf(i8* bitcast ([27 x i32]* @.str.3 to i8*), i32 %21, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 19
  %25 = call i32 @kull_m_string_displayGUID(i32* %24)
  %26 = call i32 (i8*, ...) @kprintf(i8* bitcast ([2 x i32]* @.str.4 to i8*))
  %27 = load i32, i32* %3, align 4
  %28 = shl i32 %27, 1
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 18
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 18
  %34 = load i32, i32* %33, align 4
  %35 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.5 to i8*), i32 %28, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %31, i32 %34)
  %36 = load i32, i32* %3, align 4
  %37 = shl i32 %36, 1
  %38 = call i32 (i8*, ...) @kprintf(i8* bitcast ([27 x i32]* @.str.6 to i8*), i32 %37, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 17
  %41 = call i32 @kull_m_string_displayGUID(i32* %40)
  %42 = call i32 (i8*, ...) @kprintf(i8* bitcast ([2 x i32]* @.str.4 to i8*))
  %43 = load i32, i32* %3, align 4
  %44 = shl i32 %43, 1
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 16
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 16
  %50 = load i32, i32* %49, align 4
  %51 = call i32 (i8*, ...) @kprintf(i8* bitcast ([38 x i32]* @.str.7 to i8*), i32 %44, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %47, i32 %50)
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 16
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @kull_m_dpapi_displayBlobFlags(i32 %54)
  %56 = call i32 (i8*, ...) @kprintf(i8* bitcast ([3 x i32]* @.str.8 to i8*))
  %57 = load i32, i32* %3, align 4
  %58 = shl i32 %57, 1
  %59 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %60 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i32 0, i32 15
  %61 = load i32, i32* %60, align 4
  %62 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %63 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %62, i32 0, i32 15
  %64 = load i32, i32* %63, align 4
  %65 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.9 to i8*), i32 %58, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %61, i32 %64)
  %66 = load i32, i32* %3, align 4
  %67 = shl i32 %66, 1
  %68 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %69 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %68, i32 0, i32 14
  %70 = load i32, i32* %69, align 4
  %71 = call i32 (i8*, ...) @kprintf(i8* bitcast ([30 x i32]* @.str.10 to i8*), i32 %67, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %70)
  %72 = load i32, i32* %3, align 4
  %73 = shl i32 %72, 1
  %74 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %75 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %74, i32 0, i32 13
  %76 = load i32, i32* %75, align 4
  %77 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %78 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %77, i32 0, i32 13
  %79 = load i32, i32* %78, align 4
  %80 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %81 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %80, i32 0, i32 13
  %82 = load i32, i32* %81, align 4
  %83 = call i32 @kull_m_crypto_algid_to_name(i32 %82)
  %84 = call i32 (i8*, ...) @kprintf(i8* bitcast ([42 x i32]* @.str.11 to i8*), i32 %73, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %76, i32 %79, i32 %83)
  %85 = load i32, i32* %3, align 4
  %86 = shl i32 %85, 1
  %87 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %88 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %87, i32 0, i32 12
  %89 = load i32, i32* %88, align 4
  %90 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %91 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %90, i32 0, i32 12
  %92 = load i32, i32* %91, align 4
  %93 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.12 to i8*), i32 %86, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %89, i32 %92)
  %94 = load i32, i32* %3, align 4
  %95 = shl i32 %94, 1
  %96 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %97 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %96, i32 0, i32 10
  %98 = load i32, i32* %97, align 4
  %99 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %100 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %99, i32 0, i32 10
  %101 = load i32, i32* %100, align 4
  %102 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.13 to i8*), i32 %95, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %98, i32 %101)
  %103 = load i32, i32* %3, align 4
  %104 = shl i32 %103, 1
  %105 = call i32 (i8*, ...) @kprintf(i8* bitcast ([27 x i32]* @.str.14 to i8*), i32 %104, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %106 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %107 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %106, i32 0, i32 11
  %108 = load i32, i32* %107, align 4
  %109 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %110 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %109, i32 0, i32 10
  %111 = load i32, i32* %110, align 4
  %112 = call i32 @kull_m_string_wprintf_hex(i32 %108, i32 %111, i32 0)
  %113 = call i32 (i8*, ...) @kprintf(i8* bitcast ([2 x i32]* @.str.4 to i8*))
  %114 = load i32, i32* %3, align 4
  %115 = shl i32 %114, 1
  %116 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %117 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %116, i32 0, i32 8
  %118 = load i32, i32* %117, align 4
  %119 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %120 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %119, i32 0, i32 8
  %121 = load i32, i32* %120, align 4
  %122 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.15 to i8*), i32 %115, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %118, i32 %121)
  %123 = load i32, i32* %3, align 4
  %124 = shl i32 %123, 1
  %125 = call i32 (i8*, ...) @kprintf(i8* bitcast ([27 x i32]* @.str.16 to i8*), i32 %124, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %126 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %127 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %126, i32 0, i32 9
  %128 = load i32, i32* %127, align 4
  %129 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %130 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %129, i32 0, i32 8
  %131 = load i32, i32* %130, align 4
  %132 = call i32 @kull_m_string_wprintf_hex(i32 %128, i32 %131, i32 0)
  %133 = call i32 (i8*, ...) @kprintf(i8* bitcast ([2 x i32]* @.str.4 to i8*))
  %134 = load i32, i32* %3, align 4
  %135 = shl i32 %134, 1
  %136 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %137 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %136, i32 0, i32 7
  %138 = load i32, i32* %137, align 4
  %139 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %140 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %139, i32 0, i32 7
  %141 = load i32, i32* %140, align 4
  %142 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %143 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %142, i32 0, i32 7
  %144 = load i32, i32* %143, align 4
  %145 = call i32 @kull_m_crypto_algid_to_name(i32 %144)
  %146 = call i32 (i8*, ...) @kprintf(i8* bitcast ([42 x i32]* @.str.17 to i8*), i32 %135, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %138, i32 %141, i32 %145)
  %147 = load i32, i32* %3, align 4
  %148 = shl i32 %147, 1
  %149 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %150 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %149, i32 0, i32 6
  %151 = load i32, i32* %150, align 4
  %152 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %153 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %152, i32 0, i32 6
  %154 = load i32, i32* %153, align 4
  %155 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.18 to i8*), i32 %148, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %151, i32 %154)
  %156 = load i32, i32* %3, align 4
  %157 = shl i32 %156, 1
  %158 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %159 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %158, i32 0, i32 4
  %160 = load i32, i32* %159, align 4
  %161 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %162 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %161, i32 0, i32 4
  %163 = load i32, i32* %162, align 4
  %164 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.19 to i8*), i32 %157, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %160, i32 %163)
  %165 = load i32, i32* %3, align 4
  %166 = shl i32 %165, 1
  %167 = call i32 (i8*, ...) @kprintf(i8* bitcast ([27 x i32]* @.str.20 to i8*), i32 %166, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %168 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %169 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %168, i32 0, i32 5
  %170 = load i32, i32* %169, align 4
  %171 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %172 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %171, i32 0, i32 4
  %173 = load i32, i32* %172, align 4
  %174 = call i32 @kull_m_string_wprintf_hex(i32 %170, i32 %173, i32 0)
  %175 = call i32 (i8*, ...) @kprintf(i8* bitcast ([2 x i32]* @.str.4 to i8*))
  %176 = load i32, i32* %3, align 4
  %177 = shl i32 %176, 1
  %178 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %179 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %178, i32 0, i32 2
  %180 = load i32, i32* %179, align 4
  %181 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %182 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %181, i32 0, i32 2
  %183 = load i32, i32* %182, align 4
  %184 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.21 to i8*), i32 %177, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %180, i32 %183)
  %185 = load i32, i32* %3, align 4
  %186 = shl i32 %185, 1
  %187 = call i32 (i8*, ...) @kprintf(i8* bitcast ([27 x i32]* @.str.22 to i8*), i32 %186, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %188 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %189 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %188, i32 0, i32 3
  %190 = load i32, i32* %189, align 4
  %191 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %192 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %191, i32 0, i32 2
  %193 = load i32, i32* %192, align 4
  %194 = call i32 @kull_m_string_wprintf_hex(i32 %190, i32 %193, i32 0)
  %195 = call i32 (i8*, ...) @kprintf(i8* bitcast ([2 x i32]* @.str.4 to i8*))
  %196 = load i32, i32* %3, align 4
  %197 = shl i32 %196, 1
  %198 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %199 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %198, i32 0, i32 0
  %200 = load i32, i32* %199, align 4
  %201 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %202 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %201, i32 0, i32 0
  %203 = load i32, i32* %202, align 4
  %204 = call i32 (i8*, ...) @kprintf(i8* bitcast ([37 x i32]* @.str.23 to i8*), i32 %197, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0), i32 %200, i32 %203)
  %205 = load i32, i32* %3, align 4
  %206 = shl i32 %205, 1
  %207 = call i32 (i8*, ...) @kprintf(i8* bitcast ([27 x i32]* @.str.24 to i8*), i32 %206, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.1, i64 0, i64 0))
  %208 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %209 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %208, i32 0, i32 1
  %210 = load i32, i32* %209, align 4
  %211 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %212 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %211, i32 0, i32 0
  %213 = load i32, i32* %212, align 4
  %214 = call i32 @kull_m_string_wprintf_hex(i32 %210, i32 %213, i32 0)
  %215 = call i32 (i8*, ...) @kprintf(i8* bitcast ([3 x i32]* @.str.25 to i8*))
  br label %216

216:                                              ; preds = %10, %2
  ret void
}

declare dso_local i32 @kprintf(i8*, ...) #1

declare dso_local i32 @kull_m_string_displayGUID(i32*) #1

declare dso_local i32 @kull_m_dpapi_displayBlobFlags(i32) #1

declare dso_local i32 @kull_m_crypto_algid_to_name(i32) #1

declare dso_local i32 @kull_m_string_wprintf_hex(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
